# mengram-upstream

./: CHANGELOG.md  README.md  cli.py  config.example.yaml  directory-submissions.md  importer.py  pyproject.toml  server.json
.claude-plugin/: marketplace.json
.github/workflows/: composite-rebase.yml  sync-features.yml  sync.yml
cloud/: agent-install.txt  api.py  async_client.py  client.py  dashboard.html  evolution.py  for-agents.html  landing.html  store.py
docs/superpowers/specs/: 2026-06-14-free-model-fallback-design.md
engine/: brain.py
engine/extractor/: conversation_extractor.py  llm_client.py  model_source.py
integrations/claude-code-plugin/: .mcp.json  README.md
integrations/claude-code-plugin/.claude-plugin/: plugin.json
integrations/claude-code-plugin/hooks/: hooks.json
integrations/claude-code-plugin/hooks/scripts/: load-profile.sh  save-conversation.sh
integrations/claude-code-plugin/skills/memory/: SKILL.md
obsidian-plugin/: package.json
tests/: test_brain.py  test_cli.py  test_llm_client.py  test_model_source.py
vscode-mengram/: package-lock.json  package.json
